--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionStrings": "Data source=skinetDb"
-  }
+    "DefaultConnectionStrings": "Data source=skinetDb.db"
+  },
+  "ApiUrl": "https://localhost:5001/"
 }
